2007-06-04  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/ueventhandler.cc: Sort commutable lines.
	Promote for over while.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	The attribute UVariableName::rooted is not removed (that was
	the effect of the "only" keyword) because it appears to be
	set and checked in other places.
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y: Remove
	the "only" keyword.
	This was validated by JCB.
	(refvariable): Remove, use variable instead.
	(refvariables): Rename as...
	(variables): this.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	merge -r 1078:1138 https://svn.gostai.com/svn/kernel1/branches/1.0
	Note that, again, I had to apply some of the changes by hand,
	since some files were moved in include/kernel.
	Also, I had to fill properly Matthieu's ChangeLog entries.

	2007-05-31  Matthieu Nottale  <nottale@gostai.com>
	Fix a bug in timeout command
	* src/ucommand.cc: in UCommand_TIMEOUT::execute: setTag on
	intermediate nodes instead of morphed node.

	2007-05-29  Guillaume Deslandes  <deslandes@gostai.com>
	Wrong token definition for derivations
	* ugrammar.y: Fixed definition for first and second derivation.

	2007-05-29  Matthieu Nottale  <nottale@gostai.com>
	Add the 'runningcommands' keyword, fix a bug in tag mechanism.
	* parser/bison/utoken.l: Add the runningcommands keyword.
	* ucommand.cc: Implement runningcommands.
	Add missing unsetTag call in optimised implementations of setTag.

	2007-05-28  Matthieu Nottale  <nottale@gostai.com>
	Optimisation: replace sprintfs with strcpy.
	* src/uobj.cc: Use UString::makeName where possible.
	* src/ustring.hh: Add two static inline functions to form a "a.b"
	name from two UString/char* optimising the implementation.
	* src/uvariablename.cc: Use UString::makeName where possible.

	2007-05-25  Matthieu Nottale  <nottale@gostai.com>
	Fix critical bug in previous patch, optimize more.
	* ueventhandler.cc: use the char* in unForgedName to insert